Added some code to show pairs and mean.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -55,6 +55,16 @@
     "leave unexploited pairs in the market. Pairs trading may also be difficult to scale to a level that would be attractive to institutional\n",
     "traders, like hedge funds, so the strategy has not been arbitraged out of the market.\n",
     "</p>\n",
+    "<p>\n",
+    "Mathematical finance often uses models that are based on normal distributions, constant means and standard deviations. Actual market\n",
+    "data is often not normally distributed and changes constantly. The statistics used to select stocks for pairs trading makes an assumption\n",
+    "that the pair distribution has a constant mean and standard deviation. This assumption holds, at best, over a window of time.\n",
+    "</p>\n",
+    "<p>\n",
+    "The statistics that predict a successful pair will not be right all the time. For the strategy to be successful, the predicition\n",
+    "must be right more often than not. To minimize the risk in any particular trade, this suggests that trading a larger portfolio will\n",
+    "be more successful than trading a small portfolio.\n",
+    "</p>\n",
     "<h3>\n",
     "Overview\n",
     "</h3>\n",
@@ -187,26 +197,24 @@
    "source": [
     "import os\n",
     "from datetime import datetime\n",
-    "from datetime import timedelta\n",
+    "from multiprocessing import Pool\n",
     "from typing import List, Tuple, Set\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pandas import DatetimeIndex\n",
+    "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
-    "import yfinance as yf\n",
     "from numpy import log\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from tabulate import tabulate\n",
     "\n",
-    "from multiprocessing import Pool\n",
-    "import seaborn as sns\n",
-    "\n",
+    "from plot_ts.plot_time_series import plot_ts, plot_two_ts\n",
+    "#\n",
     "# Local libraries\n",
-    "from utils.convert_date import convert_date\n",
+    "#\n",
     "from read_market_data.MarketData import MarketData\n",
+    "from utils.find_date_index import findDateIndex\n",
     "\n",
     "# Apply the default theme\n",
     "sns.set_theme()\n",
@@ -287,27 +295,6 @@
     "    sectors.append('Sum')\n",
     "    info_df.index = sectors\n",
     "    return info_df\n",
-    "\n",
-    "\n",
-    "def findDateIndex(date_index: DatetimeIndex, search_date: datetime) -> int:\n",
-    "    \"\"\"\n",
-    "    In a DatetimeIndex, find the index of the date that is nearest to search_date.\n",
-    "    This date will either be equal to search_date or the next date that is less than\n",
-    "    search_date\n",
-    "    \"\"\"\n",
-    "    i = 0\n",
-    "    search_date = convert_date(search_date)\n",
-    "    date_t = datetime.today()\n",
-    "    for i in range(0, len(date_index)):\n",
-    "        date_t = convert_date(date_index[i])\n",
-    "        if date_t >= search_date:\n",
-    "            break\n",
-    "    if date_t > search_date:\n",
-    "        index = i - 1\n",
-    "    else:\n",
-    "        index = i\n",
-    "    return index\n",
-    "\n",
     "\n",
     "\n",
     "# stock_info_df: a DataFrame with columns Symbol, Name, Sector\n",
@@ -518,36 +505,6 @@
     "    ax.set_ylabel(y_label)\n",
     "    ax.grid(True)\n",
     "    ax.hist(data_v, bins=num_bins, color=\"blue\", ec=\"blue\")\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def plot_ts(data_s: pd.Series, title: str, x_label: str, y_label: str) -> None:\n",
-    "    fix, ax = plt.subplots(figsize=(10, 8))\n",
-    "    ax.grid(True)\n",
-    "    plt.title(title)\n",
-    "    ax.set_xlabel(x_label)\n",
-    "    ax.set_ylabel(y_label)\n",
-    "    data_s.plot()\n",
-    "    ax.axhline(y=0, color='black')\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def plot_two_ts(data_a: pd.Series, data_b: pd.Series, title: str, x_label: str, y_label: str) -> None:\n",
-    "    color_a = 'blue'\n",
-    "    color_b = 'green'\n",
-    "    fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "    ax.grid(True)\n",
-    "    plt.gca().xaxis.set_major_locator(mdates.YearLocator())\n",
-    "    fig.autofmt_xdate()\n",
-    "    plt.title(title)\n",
-    "    ax.set_xlabel(x_label)\n",
-    "    ax.set_ylabel(y_label)\n",
-    "    ax.plot(data_a, color=color_a, label=data_a.columns[0])\n",
-    "    ax.tick_params(axis='y', labelcolor=color_a)\n",
-    "    ax2 = ax.twinx()\n",
-    "    ax2.plot(data_b, color=color_b, label=data_b.columns[0])\n",
-    "    ax2.tick_params(axis='y', labelcolor=color_b)\n",
-    "    plt.legend(loc='lower right')\n",
     "    plt.show()\n",
     "\n",
     "\n",
