Added analysis code.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -1239,6 +1239,21 @@
     "Alexander Pavlov (behind the Medium paywall)\n",
     "</li>\n",
     "<li>\n",
+    "<a href=\"https://letianzj.github.io/cointegration-pairs-trading.html\">Quantitative Trading and Systematic Investing by Letian Wang</a> This\n",
+    "post includes a discussion on how the results of Johansen cointegration can be interpreted.\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://www.quantrocket.com/codeload/quant-finance-lectures/quant_finance_lectures/Lecture42-Introduction-to-Pairs-Trading.ipynb.html\">Introduction to Pairs Trading</a> by Delaney Mackenzie and Maxwell Margenot\n",
+    "</li>\n",
+    "<li>\n",
+    "<p>\n",
+    "<a href=\"https://quantdevel.com/pdf/betterHedgeRatios.pdf\">Better Hedge Ratios for Spread Trading</a>, by Paul Teetor, November 2011\n",
+    "</p>\n",
+    "<p>\n",
+    "This note discusses the problem of using ordinary least squares to produce a hedge ratio.\n",
+    "</p>\n",
+    "</li>\n",
+    "<li>\n",
     "<a href=\"http://jonathankinlay.com/2019/02/pairs-trading-part-2-practical-considerations/\">Pairs Trading – Part 2: Practical Considerations</a> by Jonathan Kinlay\n",
     "</li>\n",
     "<li>\n",
@@ -1261,10 +1276,7 @@
     "<li>\n",
     "<a href=\"https://www.tradelikeamachine.com/blog/cointegration-pairs-trading/part-1-using-cointegration-for-a-pairs-trading-strategy\"><i>Using Cointegration for a Pairs Trading Strategy</i> Martyn Tinsley</a>\n",
     "</li>\n",
-    "<li>\n",
-    "<a href=\"https://letianzj.github.io/cointegration-pairs-trading.html\">Quantitative Trading and Systematic Investing by Letian Wang</a> This\n",
-    "post includes a discussion on how the results of Johansen cointegration can be interpreted.\n",
-    "</li>\n",
+    "\n",
     "<li>\n",
     "<a href=\"https://robotwealth.com/practical-pairs-trading/\">Pairs Trading on the Robot Wealth blog by Kris Longmore</a>\n",
     "</li>\n",
