Added code to check for correlation dependence.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -1432,7 +1432,7 @@
     "    return count_df\n",
     "\n",
     "\n",
-    "correlation_cutoff = 0.75\n",
+    "\n",
     "corr_df = build_corr_frame(corr_obj_list)\n",
     "cor_a = np.array(corr_df.values).ravel()\n"
    ],
@@ -1508,6 +1508,7 @@
    ],
    "source": [
     "\n",
+    "correlation_cutoff = 0.75\n",
     "cor_dist_df = calc_corr_dist(corr_df, correlation_cutoff)\n",
     "\n",
     "\n",
@@ -1551,7 +1552,32 @@
     "the next time period. This is an interesting statistics because correlation is related to cointegration. If correlation persists\n",
     "between periods then cointegration and mean reversion are likely to persist. If correlation does not persist between time periods\n",
     "then cointegration may not be persistent.\n",
-    "</p>\n"
+    "</p>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def calc_corr_dependence(corr_df: pd.DataFrame, cutoff_first: float, cutoff_second: float ) -> Tuple:\n",
+    "    corr_m = np.array(corr_df.values)\n",
+    "    no_depend = 0\n",
+    "    has_depend = 0\n",
+    "    for col_ix in range(corr_m.shape[1]):\n",
+    "        for row_ix in range(corr_m.shape[0]-1):\n",
+    "            if corr_m[row_ix, col_ix] >= cutoff_first:\n",
+    "                if corr_m[row_ix+1,col_ix] >= cutoff_second:\n",
+    "                    has_depend = has_depend + 1\n",
+    "                else:\n",
+    "                    no_depend = no_depend + 1\n",
+    "    return (no_depend, has_depend)\n",
+    "\n",
+    "\n",
+    "no_depend, has_depend = calc_corr_dependence(corr_df, correlation_cutoff, correlation_cutoff - 0.10)\n"
    ],
    "metadata": {
     "collapsed": false
