Describe the mean reverting time series as the spread time series. Plus other edits.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -47,14 +47,16 @@
     "<p>\n",
     "Markets tend toward efficiency and many quantitative approaches fade over time as they are adopted by hedge funds. Pairs trading\n",
     "goes back to the mid-1980s. Surprisingly, the approach still seems to be profitable. One reason for this could be that there are a vast\n",
-    "number of possible pairs and the pairs portfolio's tend to be fairly small (5 to 20 pairs, in most cases). This could\n",
+    "number of possible pairs and the pairs portfolio is a faction of the pairs universe. This could\n",
     "leave unexploited pairs in the market. Pairs trading may also be difficult to scale to a level that would be attractive to institutional\n",
     "traders, like hedge funds, so the strategy has not been arbitraged out of the market.\n",
     "</p>\n",
     "<p>\n",
     "Mathematical finance often uses models that are based on normal distributions, constant means and standard deviations. Actual market\n",
     "data is often not normally distributed and changes constantly. The statistics used to select stocks for pairs trading makes an assumption\n",
-    "that the pair distribution has a constant mean and standard deviation. This assumption holds, at best, over a window of time.\n",
+    "that the pair distribution has a constant mean and standard deviation (e.g., the pairs spread is a stationary time series). This\n",
+    "assumption holds, at best, over a window of time. This notebook explores the statistics of the cointegrated pairs that are candidates\n",
+    "for pairs trading.\n",
     "</p>\n",
     "<p>\n",
     "The statistics that predict a successful pair will not be accurate in all time periods. For the strategy to be successful, the predicition\n",
@@ -69,7 +71,8 @@
     "Trading</i> by Ernest P. Chan.\n",
     "</p>\n",
     "<p>\n",
-    "The pairs trading strategy attempts to find a pair of stocks that, together, form a mean reverting time series.\n",
+    "The pairs trading strategy attempts to find a pair of stocks where the weighted spread between the stock close prices is\n",
+    "mean reverting.\n",
     "</p>\n",
     "<p>\n",
     "Implementing the pairs trading strategy involves two logical steps:\n",
@@ -83,8 +86,8 @@
     "<li>\n",
     "<p>\n",
     "Trading the stocks using the long/short strategy over the trading period. This involves building a trading signal\n",
-    "from the close prices of the stock pair. When the trading signal is above or below the mean at some threshold value\n",
-    "a long and short position are taken in the two stocks.\n",
+    "from the weighted spread formed from the close prices of the stock pair. When the trading signal is above or below\n",
+    "the mean by some threshold value, a long and short position are taken in the two stocks.\n",
     "</p>\n",
     "</li>\n",
     "</ol>\n",
@@ -95,24 +98,24 @@
     "S&P 500 Industry Sectors\n",
     "</h3>\n",
     "<p>\n",
-    "Pairs are selected from the S&P 500 stock universe. These stocks are have a high trading volume, with a small bid-ask spread. These stocks\n",
-    "are also easier to short, with lower borrowing fees.\n",
+    "In this notebook, pairs are selected from the S&P 500 stock universe. These stocks are have a high trading volume, with a small\n",
+    "bid-ask spread. These stocks are also easier to short, with lower borrowing fees.\n",
     "</p>\n",
     "<p>\n",
-    "In pairs selection we are trying to find pairs that are cointegrated and have mean reverting behavior. The stock pairs should\n",
+    "In pairs selection we are trying to find pairs that are cointegrated, where the price spread has mean reverting behavior. The stock pairs should\n",
     "have some logical connection. In the book <i>Pairs Trading</i> the author discusses using factor models to select pairs with\n",
     "similar factor characteristics.\n",
     "</p>\n",
     "<p>\n",
     "Factor models are often built using company fundamental factors like earnings, corporate debt and cash flow. These factors\n",
-    "tend to be generic in that many companies in completely different industry sectors may have similar fundamental factors.  When selecting pairs\n",
+    "tend to be generic. Many companies in completely different industry sectors may have similar fundamental factors.  When selecting pairs\n",
     "we would like to select stocks that are affected by similar market forces. For example, oil companies in the energy sector tend to be\n",
-    "affected similar economic and market forces. Factors affecting companies outside the energy sector can be much more complicated.\n",
+    "affected the same economic and market forces. Factors affecting companies outside the energy sector can be much more complicated.\n",
     "In many cases the factors that affect S&P 500 companies are broad economic factors which are not obviously useful in choosing pairs\n",
     "for mean reversion trading.\n",
     "</p>\n",
     "<p>\n",
-    "In lieu of specific factors for most pairs, the S&P 500 industry sector is used as the set from which pairs are drawn.\n",
+    "In lieu of specific factors, the S&P 500 industry sector is used as the set from which pairs are drawn.\n",
     "Although not perfect, industry sector will tend to select stocks with similar behavior, while reducing the universe of\n",
     "stocks from which pairs are selected.\n",
     "</p>\n",
@@ -175,9 +178,9 @@
     "the data, but subsequent runs could read the data from local temporary files.\n",
     "</p>\n",
     "<p>\n",
-    "Downloading all of the close price data every day would have a high overhead for the S&P 500 stocks. To avoid this, the\n",
-    "data is downloaded once and stored in local files. When the notebook is run at later times, only the data between the\n",
-    "end of the last date in the file and the current end date will be downloaded.\n",
+    "For the S&P 500 stock universe, downloading all of the close price data the first time the notebook is run would have an unacceptable\n",
+    "overhead. To avoid this, the data is downloaded once and stored in local files. When the notebook is run at later times, only the\n",
+    "data between the end of the last date in the file and the current end date will be downloaded.\n",
     "</p>\n",
     "<p>\n",
     "There are stocks in the S&P 500 list that were listed on the stock exchange later than the start date.  These\n",
@@ -418,7 +421,8 @@
     "</p>\n",
     "<p>\n",
     "In using a lookback period to choose trading pairs we are making the assumption that the past\n",
-    "will resemble the future trading period. The longer the lookback period, the less likely it is that the statistics will match\n",
+    "will resemble the future trading period (this notebook explores the reliability of this assumption).\n",
+    "The longer the lookback period, the less likely it is that the statistics will match\n",
     "the trading period. This creates a tension between statistical accuracy and statistics that are more likely to reflect\n",
     "the future trading period.\n",
     "</p>\n",
@@ -432,10 +436,10 @@
     "Mean Reversion\n",
     "</h2>\n",
     "<p>\n",
-    "A single stock price series (or log price) is rarely stationary and mean reverting.\n",
-    "In selecting stock pairs we are looking for a stock pair that, when combined, is stationary and mean reverting. A stationary time series\n",
+    "A single stock price (or log price) series is rarely stationary and mean reverting.\n",
+    "In selecting stock pairs we are looking for a stock pair with a spread time series that is stationary and mean reverting. A stationary time series\n",
     "is a time series that has a constant mean and standard deviation. Stock time series are constantly changing, so we are looking for\n",
-    "a pair that can form a stationary and mean reverting time series over a particular time window.\n",
+    "a pair that has a spread that is stationary and mean reverting over the back test period.\n",
     "</p>\n",
     "<p>\n",
     "When a pair forms a mean reverting, stationary time series, it is referred to as a cointegrated time series.\n",
@@ -453,27 +457,27 @@
     "</p>\n",
     "</blockquote>\n",
     "<p>\n",
-    "In the equation below, <i>m</i> is a stationary mean reverting time series, P<sub>A</sub> is the price series for stock A,\n",
+    "In the equation below, <i>s</i> is the stationary mean reverting weighted spread time series, P<sub>A</sub> is the price series for stock A,\n",
     "P<sub>B</sub> is the price series for stock B and β is the weight factor (for one share of stock A there will be β shares of\n",
     "stock B).\n",
     "</p>\n",
     "\n",
-    "\\$  m = P_A - \\beta P_B $\n",
+    "\\$ s = P_A - \\beta P_B $\n",
     "\n",
-    "\\$ m = \\mu  \\space when \\space P_A = \\beta P_B $\n",
+    "\\$ s = \\mu  \\space when \\space P_A = \\beta P_B $\n",
     "\n",
-    "\\$ m > \\mu + \\delta \\space when \\space P_A > \\beta P_B \\space (short \\space P_A, \\space long \\space P_B) $\n",
+    "\\$ s > \\mu + \\delta \\space when \\space P_A > \\beta P_B \\space (short \\space P_A, \\space long \\space P_B) $\n",
     "\n",
-    "\\$ m < \\mu + \\delta \\space when \\space P_A < \\beta P_B \\space (long \\space P_A, \\space sort \\space P_B) $\n",
+    "\\$ s < \\mu + \\delta \\space when \\space P_A < \\beta P_B \\space (long \\space P_A, \\space sort \\space P_B) $\n",
     "\n",
     "<p>\n",
-    "When <i>m</i> is above the mean at some level (perhaps one standard deviation), a short position will be taken in stock A\n",
-    "and a long position will be taken in stock B.  When <i>m</i> is below the mean at some level (perhaps one standard deviation)\n",
+    "When <i>s</i> is above the mean at some level (perhaps one standard deviation), a short position will be taken in stock A\n",
+    "and a long position will be taken in stock B.  When <i>s</i> is below the mean at some level (perhaps one standard deviation)\n",
     "a long position will be taken in stock A and a short position will be taken in stock B. The position taken in stock B will be\n",
     "larger than the postion in stock A by a factor of β.\n",
     "</p>\n",
     "<p>\n",
-    "In identifying a pair for pairs trading a determination is made on whether <i>m</i> is mean reverting.  The process of determining\n",
+    "In identifying a pair for pairs trading a determination is made on whether <i>s</i> is mean reverting.  The process of determining\n",
     "mean reversion will also provide the value of β.\n",
     "</p>\n",
     "<h2>\n",
@@ -708,7 +712,8 @@
     "</h3>\n",
     "<p>\n",
     "AAPL (Apple Inc), MPWR (Monolithic Power Systems, Inc) are in the technology industry sector.  YUM (Yum brands is a food company in a\n",
-    "different industry sector). The correlations with AAPL in the first half of 2007 are shown below.\n",
+    "different industry sector). The correlations with AAPL in the first half of 2007 are shown below.  AAPL and MPWR are both technology sector\n",
+    "stocks, while YUM brands is a food company. Other than overall stock market dynamics, we would not expect AAPL and YUM to be correlated.\n",
     "</p>"
    ],
    "metadata": {
@@ -742,6 +747,25 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<p>\n",
+    "Monolithic Power Systems, Inc. (MPWR) stock grew at a rate that was similar to Apple's, although their everall market\n",
+    "capitalization is a faction of Apples now. I was unfamiliar with MPWR until I wrote this notebook. Bloomberg's describes\n",
+    "MPWR's business as:\n",
+    "</p>\n",
+    "<blockquote>\n",
+    "Monolithic Power Systems, Inc. designs and manufactures power management solutions. The Company provides power conversion, LED lighting, load switches, cigarette lighter adapters, chargers, position sensors, analog input, and other electrical components. Monolithic Power Systems serves customers globally.\n",
+    "</blockquote>\n",
+    "<p>\n",
+    "A brief digression: Apple is now (2022) one of the most\n",
+    "valuable companies in the world. A number of investment funds bought Apple shares and were able to beat the overall market\n",
+    "for the years when Apple had exceptional growth.\n",
+    "</p>\n",
+    "<p>\n",
+    "My father invested in such a fund. Every quarter they sent out a \"market outlook\"\n",
+    "newsletter. This newsletter was filled with blather to make fund investors think that the people managing the fund had special insight into the\n",
+    "stock market (which justified the fees the fund charged). In fact, their only insight was their position in Apple stock.\n",
+    "When Apple's share price plateaued, so did the funds returns.\n",
+    "</p>\n",
     "<p>\n",
     "Pairs may have high correlation without being cointegrated.  The (Engle) Granger test shows that in the first half of 2007\n",
     "AAPL and MPWR were cointegrated at the 99% level.\n",
@@ -791,7 +815,7 @@
     "90% confidence.\n",
     "</p>\n",
     "<p>\n",
-    "The plot below shows the stationary time series formed by\n",
+    "The plot below shows the stationary spread time series formed by\n",
     "</p>\n",
     "\n",
     "\\$  m = MPWR - intercept - 3.7 * AAPL $\n",
@@ -1113,13 +1137,12 @@
     "The Johansen Test\n",
     "</h3>\n",
     "<p>\n",
-    "Unlike the Granger linear regression based test, the Johansen test can be used on more than two assets. The result is a multi-factor\n",
-    "linear model for the cointegration mean reverting time series.\n",
+    "The Granger linear regression based test can only be used for two assets. The Johansen test can be used on more than two assets.\n",
     "</p>\n",
     "<p>\n",
-    "The Johansen test uses eigenvalue decomposition for the estimation of cointegration. The Granger test has two steps: linear regression\n",
-    "and the ADF test. The Johansen test is a single test that also provides the weight factor. There is no linear constant (regression intercept)\n",
-    "as there is with the Granger test.\n",
+    "The Johansen test uses eigenvalue decomposition for the estimation of cointegration. In contract to the Granger test which has two steps:\n",
+    "linear regression and the ADF test, the Johansen test is a single step test that also provides the weight factors. There is no linear\n",
+    "constant (regression intercept) as there is with the Granger test, so the Johansen result may not have a mean of zero.\n",
     "</p>\n",
     "<p>\n",
     "The Johansen test and the Granger test do not always agree. The Johansen test is applied to AAPL/MPWR for the close prices from the first\n",
@@ -1168,7 +1191,7 @@
     "</p>\n",
     "<p>\n",
     "Stocks that are strongly correlated are more likely to also exhibit mean reversion since they have similar market behavior.\n",
-    "This section examines the correlation distribution for the S&P 500 sector pairs.\n",
+    "This section examines the correlation statistics for the S&P 500 sector pairs.\n",
     "</p>\n"
    ],
    "metadata": {
@@ -1350,24 +1373,8 @@
    "source": [
     "<p>\n",
     "Since correlation is not stable, a stock pair that is highly correlated in one time period may be uncorrelated (or negatively\n",
-    "correlated) in another time period.\n",
-    "</p>\n",
-    "<p>\n",
-    "Monolithic Power Systems, Inc. (MPWR) stock grew at a rate that was similar to Apple's, although their everall market\n",
-    "capitalization is a faction of Apples now. I was unfamiliar with MPWR until I wrote this notebook. Bloomberg's describes\n",
-    "MPWR's business as:\n",
-    "</p>\n",
-    "<blockquote>\n",
-    "Monolithic Power Systems, Inc. designs and manufactures power management solutions. The Company provides power conversion, LED lighting, load switches, cigarette lighter adapters, chargers, position sensors, analog input, and other electrical components. Monolithic Power Systems serves customers globally.\n",
-    "</blockquote>\n",
-    "<p>\n",
-    "A brief digression: Adjusted for splits, Apple Inc (AAPL) was about $4.33 per share. Apple is now (2022) one of the most\n",
-    "valuable companies in the world. A number of investment funds bought Apple shares and were able to beat the overall market\n",
-    "for the years when Apple has exceptional growth. My father invested in such a fund. Every quarter they sent out a \"market outlook\"\n",
-    "new letter. This was filled with blather to make fund investors think that the people managing the fund had special insight into the\n",
-    "stock market (which justified the fees the fund charged). In fact, their only insight was their position in Apple stock.\n",
-    "When Apple's share price plateaued, so did the funds returns.\n",
-    "</p>"
+    "correlated) in the next time period.\n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
