--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -1640,32 +1640,45 @@
     "Stability of Cointegeration\n",
     "</h2>\n",
     "<p>\n",
-    "In this section I look how often cointegration in a half year period for a pair is followed by another half year where there is cointegration.\n",
+    "Cointegration for a pair is calculated over an in-sample look-back period. When a pair is found to be cointegrated, trading takes place\n",
+    "in the out-of-sample period. For example, cointegration is calculated over a half year look-back period. Trading, using the cointegration spread,\n",
+    "takes place over a three month out-of-sample period following the look-back period.\n",
     "</p>\n",
     "<p>\n",
-    "The code to examine correlation stability calculates the correlation for all of the pairs, through a six month time period, starting in\n",
-    "January of 2007.\n",
+    "For a cointegrated pair, the spread time series is, in an ideal world, a stationary time series with a constant mean and standard deviation.\n",
+    "The spread time series is mean reverting, so that divergences from the mean return to the mean. The statistics of the spread time series,\n",
+    "in an ideal world, are consistent between the look-back period and the trading period.\n",
     "</p>\n",
     "<p>\n",
-    "For a six month time period with a high correlation (correlation greater than or equal to 0.75), cointegration is calculated for the\n",
-    "pair using the Granger test.\n",
+    "In the real world, stock and stock pair behavior is constantly changing.  For pairs trading to succeed in the real world (as opposed to\n",
+    "the ideal world), the mean reversion of the spread time series must persist (be stationary) between the look-back period and the trading\n",
+    "period often enough to yield a profit.\n",
     "</p>\n",
     "<p>\n",
-    "After calculating the cointegeration for every six month period, the code looks at whether cointegration in a a six month time period\n",
-    "is followed by cointegration in the next six month time period.\n",
+    "There is no way to know if a pair will remain stationary between the look-back period and the trading period. What can be examined\n",
+    "are the historical frequences where there is stationarity between the look-back period and the trading period.\n",
     "</p>\n",
     "<p>\n",
-    "There are a limited number of six month time periods. The time periods for a single pair would not be statistically significant, but the code looks\n",
-    "over all 8863 pairs.  For 32 time period, this the matrix consists of 283,616 elements.  Of these, only about 13% have high correlation and\n",
-    "are cointegrated.\n",
+    "There are a limited number of six month time periods. Looking at the stationarity for a single pair would not be statistically\n",
+    "significant, but we can look over all 8863 pairs over 32 time periods.\n",
+    "</p>\n",
+    "<h3>\n",
+    "Computation\n",
+    "</h3>\n",
+    "<p>\n",
+    "For every pair the correlation, granger cointegration and johansen cointegeration is calculated. The calculation is very compute intensive\n",
+    "and Python is notorious for being slow compared to C++ and Java (Python does, however, have lots of support for statistics and data analysis).\n",
+    "I have only succeeded in successfully doing this calculation in a single Python thread.  I tried to use Python's Pool parallelism which would\n",
+    "allow me to run the calculation in parallel on the 16-CPU cores on my Linux system. Unfortunately this resulted in a segment fault\n",
+    "causing the calculation to fail.\n",
     "</p>\n",
     "<p>\n",
-    "The code to calculate the matrix of cointergration results is time consuming, so it is not executed in the notebook.  The code is included\n",
-    "in the notebook however.\n",
+    "The historical calculation is constant (since the historical data is constant). To avoid recalculating the correlation and cointegration\n",
+    "data, the values are stored in files. A Pandas DataFrame is constructed from this data.\n",
     "</p>\n",
     "<p>\n",
-    "The results are shown below.\n",
-    "</p>"
+    "The data in these files can be recalculated by removing the files and running the notebook.\n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1677,7 +1690,7 @@
    "execution_count": 46,
    "outputs": [],
    "source": [
-    "\n",
+    "A\n",
     "class CalcPairsCointegration:\n",
     "    def __init__(self, close_prices_df: pd.DataFrame):\n",
     "        self.close_prices_df = close_prices_df\n",
