--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -36,7 +36,7 @@
     "combination of both.\n",
     "</p>\n",
     "<p>\n",
-    "<i>Definitive Guide to Pairs Trading</i> availabel from <a href=\"https://hudsonthames.org/\">Hudson and Thames</a>\n",
+    "<i>Definitive Guide to Pairs Trading</i> available from <a href=\"https://hudsonthames.org/\">Hudson and Thames</a>\n",
     "</p>\n",
     "</blockquote>\n",
     "<p>\n",
