Added some half-life code.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -759,7 +759,7 @@
    "source": [
     "<p>\n",
     "Monolithic Power Systems, Inc. (MPWR) stock grew at a rate that was similar to Apple's, although their everall market\n",
-    "capitalization is a faction of Apples now. I was unfamiliar with MPWR until I wrote this notebook. Bloomberg's describes\n",
+    "capitalization is a faction of Apples now. I was unfamiliar with MPWR until I wrote this notebook. Bloomberg describes\n",
     "MPWR's business as:\n",
     "</p>\n",
     "<blockquote>\n",
@@ -2236,12 +2236,12 @@
     "</li>\n",
     "<li>\n",
     "<p>\n",
-    "Cointegration is persistent about 40% of the time for Granger and Johansen cointegration, for all of the confidence levels.\n",
+    "Cointegration is persistent about 40% of the time for either Granger or Johansen cointegration, at all of the confidence levels.\n",
     "</p>\n",
     "</li>\n",
     "<li>\n",
     "<p>\n",
-    "There are lots of in-sample pairs to choose from.\n",
+    "There are lots of in-sample pairs with high correlation and cointegration to choose from.\n",
     "</p>\n",
     "</li>\n",
     "</ul>\n",
@@ -2249,7 +2249,36 @@
     "Since the Granger and Johansen tests produce very similar results. I prefer the Granger test because it is easier to understand and\n",
     "provides an intercept value, which tends to produce a spread series with a mean of zero. Higher cointegration confidence intervals do\n",
     "not deliver higher serial cointegration, so a simple test for a non-zero confidence interval can be used.\n",
+    "</p>\n",
+    "<h2>\n",
+    "Pairs Trading and the Problems of Mathematical Finance\n",
+    "</h2>\n",
+    "<p>\n",
+    "Mathematical finance often assumes normal distributions and statistics that are constant (constant mean and standard deviation, for example).\n",
+    "If the assumptions involving constant statistics were actually true, it would be much easier to make money (except for the fact that mathematical\n",
+    "finance would assume that these opportunities would have already been arbitraged out).\n",
+    "</p>\n",
+    "<p>\n",
+    "The statistics examined in this notebook are not constant. There are wide variations in correlation between time periods. Cointegration is also\n",
+    "not constant from one time period to another. In fact, in 60% of the cases a pair that is cointegrated in one time period is not cointegrated in\n",
+    "the following time period.\n",
+    "</p>\n",
+    "<p>\n",
+    "The mathematical finance papers on mean reversion are written for a world where the spread between two mean reverting assets is a stationary\n",
+    "Ornstein-Uhlenbeck process. This world may exist looking backward at in-sample data. For out-of-sample data, these statistics break down, as\n",
+    "demonstrated in this paper. The statistical characteristics of the past in-sample period often do not describe the out-of-sample trading period.\n",
     "</p>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<h2>\n",
+    "Halflife for a Mean Reverting Ornstein – Uhlenbeck Process\n",
+    "</h2>"
    ],
    "metadata": {
     "collapsed": false
@@ -2261,18 +2290,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_half_life_vals(coint_info_df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    num_cols = coint_info_df.shape[1]\n",
-    "    num_rows = coint_info_df.shape[0]\n",
-    "    halflife_l = list()\n",
-    "    for col_ix in range(num_cols):\n",
-    "        for row_ix in range(num_rows):\n",
-    "            obj = coint_info_df.iloc[row_ix, col_ix]\n",
-    "            if obj[1] is not None:\n",
-    "                if obj[1].confidence > 0:\n",
-    "                    halflife_l.append(obj[1].halflife)\n",
-    "    halflife_df = pd.DataFrame(halflife_l)\n",
-    "    return halflife_df\n"
+    "\n",
+    "\n",
+    "def half_life(spread_a: np.array) -> int:\n",
+    "    \"\"\"\n",
+    "    https://quant.stackexchange.com/questions/25086/calculating-half-life-of-mean-reverting-series-with-python/25119\n",
+    "    :param spread_a:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    spread_lag = np.roll(spread_a,1)\n",
+    "    spread_lag[0] = 0\n",
+    "    spread_ret = spread_a - spread_lag\n",
+    "    spread_ret[0] = 0\n",
+    "    #adds intercept terms to X variable for regression\n",
+    "    spread_lag2 = sm.add_constant(spread_lag)\n",
+    "    model = sm.OLS(spread_ret,spread_lag2)\n",
+    "    res = model.fit()\n",
+    "    halflife_f = -log(2) / res.params[1]\n",
+    "    halflife_i = int(round(halflife_f))\n",
+    "    return halflife_i\n",
+    "\n",
+    "\n",
+    "def half_life_ep_chan(spread_df: np.array) -> int:\n",
+    "    \"\"\"\n",
+    "    This half-life calculation may not be correct\n",
+    "    :param spread_df:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    spread_prev = spread_df.shift()\n",
+    "    spread_ret = spread_df - spread_prev\n",
+    "    spread_ret = spread_ret[1:,]\n",
+    "    model2 = sm.OLS(spread_ret, spread_prev - np.mean(spread_prev))\n",
+    "    results2 = model2.fit()\n",
+    "    theta = results2.params\n",
+    "    halflife = -np.log(2)/theta\n",
+    "    halflife_i = int(round(halflife))\n",
+    "    return halflife_i\n"
    ]
   },
   {
